<resources>
    <string name="app_name">MeshController</string>

    <string name="create_room">Create a room to place your devices, for example, master bedroom.</string>

    <string name="title_section1">Home Page</string>
    <string name="title_section2">Scene</string>
    <string name="title_section3">Section 3</string>

    <string name="action_settings">Settings</string>
    <string name="gp_dev_name">Device Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_device">AddDevice</string>
    <string name="title_activity_group">Group</string>
    <string name="title_activity_add_group">AddGroup</string>
    <string name="title_activity_new_scene">NewScene</string>
    <string name="title_activity_edit_scene">EditScene</string>
    <string name="title_activity_delete">Delete</string>
    <string name="new_Network">New Network</string>
    <string name="title_activity_search_device">Search Device</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="sports_array">
                
        <item>Drawing Room</item>
                
        <item>floor light</item>
            
    </string-array>

    <string-array name="inside_outside">
        <item>Inside</item>
        <item>Outside</item>
    </string-array>

    <string-array name="scene_array">
        <item>Select Scene</item>
                
        <item>Morning</item>
        <item>Good Night</item>
        <item>Watching TV</item>
        <item>Party</item>
           
            
    </string-array>
     
    <string-array name="device_array">
                
        <item>bulb 2</item>
                
        <item>bulb 3</item>
            
    </string-array>
     
    <string-array name="network_list">
                
        <item>Home</item>
                
        <item>office</item>
            
    </string-array>
    <string name="title_activity_light">Light</string>
    <string name="title_activity_new_timer">NewTimer</string>
    <string name="title_activity_timer">timer</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_activity_model">ActivityModel</string>


    <!-- UI Labels -->
    <string name="label_selectdevice">Select device</string>
    <string name="label_connect">Connect</string>
    <string name="label_disconnect">Disconnect</string>
    <string name="label_ota_service">OTA Firmware Upgrade</string>
    <string name="description_ota_service">Select OTA image file to use, then press Update button</string>
    <string name="label_device_info_service">Service: Device Information</string>
    <string name="label_battery_service">Service: Battery</string>
    <string name="label_manufacturer_name">Manufacturer name</string>
    <string name="label_model_number">Model number</string>
    <string name="label_system_id">System ID</string>
    <string name="label_battery_level">Battery level</string>
    <string name="label_settings">Device Settings</string>
    <string name="label_ota_input">Characteristic: OTA configuration\n{%1$s}</string>
    <string name="label_ota_configuration">Characteristic: OTA configuration\n{%1$s}</string>
    <string name="label_write">Write</string>
    <string name="label_read">Read</string>
    <string name="label_clear">Clear</string>
    <string name="label_notifications">Notifications</string>

    <!-- Menu strings -->
    <string name="label_menu_dfu">Mesh Network DFU</string>
    <string name="label_menu_ota">Mesh Device OTA</string>

    <!-- DFU strings -->
    <string name="label_dfu_title">Mesh Network DFU\n(Device Firmware Upgrade)</string>
    <string name="label_dfu_select_json_file">Select Json File</string>
    <string name="label_dfu_select_firmware_file">Select Firmware File</string>
    <string name="label_dfu_select_metadata_file">Select Metadata File</string>
    <string name="label_dfu_auto_apply_fw">Auto-apply Firmware Update</string>
    <string name="label_dfu_status_interval">Status Interval</string>
    <string name="label_dfu_uploading">Firmware Uploading Status:</string>
    <string name="label_dfu_status">DFU Status:</string>
    <string name="label_dfu_seconds">seconds</string>
    <string name="label_dfu_start">Start DFU</string>
    <string name="label_dfu_stop">Stop DFU</string>
    <string name="label_dfu_get_status">Get DFU Status</string>

    <!-- OTA strings -->
    <string name="label_ota_title">Mesh Device OTA\n(Over-The-Air) Firmware Upgrade</string>
    <string name="label_ota_select_firmware_file">Select Firmware File</string>
    <string name="label_ota_uploading">Firmware Uploading Status:</string>
    <string name="label_ota_start_ota">Start OTA</string>
    <string name="label_ota_stop_ota">Stop OTA</string>
    <string name="label_ota_connecting_node">Status: Connecting OTA node...</string>
    <string name="label_ota_node_connected">Status: Node connected, start downloading</string>
    <string name="label_ota_node_connect_failed">Status: Node connection failed</string>

    <!-- Error messages -->
    <string name="error_bluetooth_not_available">Bluetooth is not available or enabled</string>
    <string name="error_connect">Problem connecting to device %1$s (%2$s)</string>
    <string name="error_disconnect">Problem disconnecting from device %1$s (%2$s)</string>
    <string name="error_connection">Problem with connection to device %1$s (%2$s)</string>
    <string name="error_discover">Problem discovering services on device %1$s (%2$s)</string>

    <!-- Shared strings -->
    <string name="label_connect_to_network">Connect To Network</string>
    <string name="label_connect_to_network_msg">\nConnect to mesh network?</string>

    <!-- Default values -->
    <string name="no_value">(no value)</string>
    <string name="no_device">&lt;Tap to select a device&gt;</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string-array name="values_ota_input">
        <item>Do not send</item>
        <item>Allow notifications</item>
        <item>Allow indications</item>
    </string-array>
    <string name="label_update">Update</string>
    <string name="no_ota_image">&lt;Tap to select OTA image&gt;</string>
    <string-array name="dfu_values">
        <item>Proxy DFU to all</item>
<!--        <item>App DFU to all</item>-->
<!--        <item>App OTA to device</item>-->
        <!--<item>Proxy DFU to device</item>-->
    </string-array>


    <string-array name="trigger_type">
        <item>Native</item>
        <item>Percentage</item>
    </string-array>

    <string-array name="pub_address">
        <item>all-nodes</item>
        <item>all-proxies</item>
        <item>all-friends</item>
        <item>all-relays</item>
    </string-array>

    <string-array name="Xtimes">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
    </string-array>

    <string-array name="PropertyId">
        <item>Time Occupancy Delay (0x3a)</item>
        <item>Time Fade On (0x37)</item>
        <item>Time Run On (0x3c)</item>
        <item>Time Fade (0x36)</item>
        <item>Time Prolong (0x3b)</item>
        <item>Time Fade Standby Auto (0x38)</item>
        <item>Time Fade Standby Manual (0x39)</item>
        <item>Lightness On (0x2e)</item>
        <item>Lightness Prolong (0x2f)</item>
        <item>Lightness Standby (0x30)</item>
        <item>Ambient LuxLevel On (0x2b)</item>
        <item>Ambient LuxLevel Prolong (0x2c)</item>
        <item>Ambient LuxLevel Standby (0x2d)</item>
        <item>Regulator Kiu (0x33)</item>
        <item>Regulator Kid (0x32)</item>
        <item>Regulator Kpu (0x35)</item>
        <item>Regulator Kpd (0x34)</item>
        <item>Regulator Accuracy (0x31)</item>
    </string-array>

</resources>
