<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/label_dfu_title"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:id="@+id/dfu_type"
                    android:entries="@array/dfu_values" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_dfu_json_file"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="left"
                        android:background="@drawable/attach" />
                    <TextView
                        android:id="@+id/text_dfu_json_path"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:maxLines="4"
                        android:text="@string/label_dfu_select_json_file" />
                </LinearLayout>

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="8dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:orientation="horizontal">-->

<!--                    <ImageButton-->
<!--                        android:id="@+id/btn_dfu_firmware_file"-->
<!--                        android:layout_width="40dp"-->
<!--                        android:layout_height="40dp"-->
<!--                        android:layout_gravity="left"-->
<!--                        android:background="@drawable/attach" />-->
<!--                    <TextView-->
<!--                        android:id="@+id/text_dfu_firmware_path"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center_vertical"-->
<!--                        android:layout_margin="5dp"-->
<!--                        android:maxLines="4"-->
<!--                        android:text="@string/label_dfu_select_firmware_file" />-->
<!--                </LinearLayout>-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="8dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:orientation="horizontal">-->

<!--                    <ImageButton-->
<!--                        android:id="@+id/btn_dfu_metadata_file"-->
<!--                        android:layout_width="40dp"-->
<!--                        android:layout_height="40dp"-->
<!--                        android:layout_gravity="left"-->
<!--                        android:background="@drawable/metadata" />-->
<!--                    <TextView-->
<!--                        android:id="@+id/text_dfu_metadata_path"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center_vertical"-->
<!--                        android:layout_margin="5dp"-->
<!--                        android:maxLines="4"-->
<!--                        android:text="@string/label_dfu_select_metadata_file" />-->
<!--                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/switch_dfu_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:checked="false" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="1dp"
                        android:maxLines="3"
                        android:text="@string/label_dfu_status_interval" />
                    <EditText
                        android:id="@+id/edit_dfu_status_interval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:inputType="number"
                        android:layout_marginLeft="4dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="4dp"
                        android:text="@string/label_dfu_seconds" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/info_1"
                        android:padding="1dp" />
                    <TextView
                        android:id="@+id/text_dfu_uploading_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text="@string/label_dfu_uploading" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/info_1"
                        android:padding="1dp" />
                    <TextView
                        android:id="@+id/text_dfu_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text="@string/label_dfu_status" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="30">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_dfu_start"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/upload_all"
                    android:padding="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/label_dfu_start"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_dfu_stop"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/stop"
                    android:padding="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/label_dfu_stop"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_dfu_get_status"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/info_1"
                    android:padding="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/label_dfu_get_status"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/accent">

        <View
            android:id="@+id/view_dfu_connected"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="@android:color/holo_red_dark" />
        <Button
            android:id="@+id/btn_dfu_connect_to_proxy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label_connect_to_network"
            android:background="@android:color/transparent"
            android:textColor="@color/text"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
